deployment/traefik.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
    tier: edge
    type: lb
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
  - protocol: TCP
    targetPort: 443
    port: 443
    name: https
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-status
spec:
  selector:
    k8s-app: traefik-ingress-lb
    tier: edge
    type: lb
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
    name: webui
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  labels:
    k8s-app: traefik-ingress-lb
    tier: edge
    type: lb
    name: traefik-ingress-controller
spec:
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        tier: edge
        type: lb
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
        - name: ssl
          secret:
            secretName: traefik-cert
        - name: config
          configMap:
            name: traefik-conf
      containers:
        - image: traefik:v1.4.2-alpine
          name: traefik-ingress-lb
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/ssl"
              name: "ssl"
            - mountPath: "/config"
              name: "config"
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
            - containerPort: 8080
              name: status
          args:
            - --configfile=/config/traefik.toml
            - --web
            - --kubernetes
            - --logLevel=DEBUG
