deployment/wordpress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 6
  selector:
    matchLabels:
      tier: frontend
      type: web
      name: wordpress
  template:
    metadata:
      labels:
        tier: frontend
        type: web
        name: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress
spec:
  selector:
    tier: frontend
    type: web
    name: wordpress
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
