deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: devfest.netbears.com
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
    - host: www.devfest.netbears.com
      http:
        paths:
          - backend:
              serviceName: whoami
              servicePort: 80
